--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@google/genai": "^1.35.0",
     "framer-motion": "^12.25.0",
-    "recharts": "^3.6.0",
-    "react": "^19.2.3",
     "lucide-react": "^0.562.0",
-    "react-dom": "^19.2.3"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
